--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,7 +38,7 @@ members = [
 	"partner-chains-cli",
 	"pallets/native-token-management",
 	"primitives/native-token-management",
-	"toolkit/offchain",
+	"toolkit/offchain", "primitives/plutus-data",
 ]
 resolver = "2"
 
@@ -217,3 +217,4 @@ sp-partner-chains-consensus-aura = { path = "primitives/consensus/aura", default
 pallet-partner-chains-session = { path = "pallets/partner-chains-session", default-features = false }
 pallet-session-runtime-stub = { path = "pallets/pallet-session-runtime-stub", default-features = false }
 partner-chains-cardano-offchain = { path = "toolkit/offchain" }
+partner-chains-plutus-data = { path = "primitives/plutus-data" }
