add: --ci-run for local-environment

--- a/.github/actions/tests/run-e2e-tests/action.yml
+++ b/.github/actions/tests/run-e2e-tests/action.yml
@@ -75,6 +75,7 @@ runs:
           -m '${{ inputs.markers }}' \
           -n 4 \
           --dist=loadgroup \
+          --ci-run \
           --init-timestamp '${{ inputs.init_timestamp }}' \
           ${mc_epoch_switch} \
           ${latest_mc_epoch_switch} \
