change: include input data hash in Ariadne inherent
Signed-off-by: Nikolaos Dymitriadis <nikolaos.dymitriadis@iohk.io>

--- a/toolkit/pallets/session-validator-management/Cargo.toml
+++ b/toolkit/pallets/session-validator-management/Cargo.toml
@@ -36,7 +36,10 @@ std = [
     "sp-core/std",
     "sp-runtime/std",
     "sp-std/std",
-    "sp-session-validator-management/std"
+    "sp-session-validator-management/std",
+    "sp-session-validator-management/serde",
+    "sidechain-domain/std",
+    "sidechain-domain/serde",
 ]
 try-runtime = ["frame-support/try-runtime"]
 mock = [
